# ubuntu-bgrt-themes

./: README.md  meson_options.txt
debian/: control  plymouth-theme-ubuntu-bgrt.postinst  plymouth-theme-ubuntu-bgrt.postrm
plymouth-theme/: meson.build
plymouth-theme/src/: bgrt.plymouth.in  meson.build
plymouth-theme/src/meson/: kubuntu_post_install.sh  ubuntu_budgie_post_install.sh  ubuntu_mate_post_install.sh  ubuntu_post_install.sh  xubuntu_post_install.sh
